include/dss_capi.h

    DSS_CAPI_DLL char* Solution_Get_LDCurve(void);
    DSS_CAPI_DLL void Solution_Set_LDCurve(char* Value);
    DSS_CAPI_DLL double Solution_Get_pctGrowth(void);
    DSS_CAPI_DLL void Solution_Set_pctGrowth(double Value);
    DSS_CAPI_DLL int32_t Solution_Get_AddType(void);
    DSS_CAPI_DLL void Solution_Set_AddType(int32_t Value);
    DSS_CAPI_DLL double Solution_Get_GenkW(void);
    DSS_CAPI_DLL void Solution_Set_GenkW(double Value);
    DSS_CAPI_DLL double Solution_Get_GenPF(void);
    DSS_CAPI_DLL void Solution_Set_GenPF(double Value);
    DSS_CAPI_DLL double Solution_Get_Capkvar(void);
    DSS_CAPI_DLL void Solution_Set_Capkvar(double Value);
    DSS_CAPI_DLL int32_t Solution_Get_Algorithm(void);
    DSS_CAPI_DLL void Solution_Set_Algorithm(int32_t Value);
    DSS_CAPI_DLL int32_t Solution_Get_ControlMode(void);
    DSS_CAPI_DLL void Solution_Set_ControlMode(int32_t Value);
    DSS_CAPI_DLL double Solution_Get_GenMult(void);
    DSS_CAPI_DLL void Solution_Set_GenMult(double Value);
    DSS_CAPI_DLL char* Solution_Get_DefaultDaily(void);
    DSS_CAPI_DLL char* Solution_Get_DefaultYearly(void);
    DSS_CAPI_DLL void Solution_Set_DefaultDaily(char* Value);
    DSS_CAPI_DLL void Solution_Set_DefaultYearly(char* Value);
    DSS_CAPI_DLL void Solution_Get_EventLog(char*** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL double Solution_Get_dblHour(void);
    DSS_CAPI_DLL void Solution_Set_dblHour(double Value);
    DSS_CAPI_DLL void Solution_Set_StepsizeHr(double Value);
    DSS_CAPI_DLL void Solution_Set_StepsizeMin(double Value);
    DSS_CAPI_DLL int32_t Solution_Get_ControlIterations(void);
    DSS_CAPI_DLL int32_t Solution_Get_MaxControlIterations(void);
    DSS_CAPI_DLL void Solution_Sample_DoControlActions(void);
    DSS_CAPI_DLL void Solution_Set_ControlIterations(int32_t Value);
    DSS_CAPI_DLL void Solution_Set_MaxControlIterations(int32_t Value);
    DSS_CAPI_DLL void Solution_CheckFaultStatus(void);
    DSS_CAPI_DLL void Solution_SolveDirect(void);
    DSS_CAPI_DLL void Solution_SolveNoControl(void);
    DSS_CAPI_DLL void Solution_SolvePflow(void);
    DSS_CAPI_DLL void Solution_SolvePlusControl(void);
    DSS_CAPI_DLL void Solution_SolveSnap(void);
    DSS_CAPI_DLL void Solution_CheckControls(void);
    DSS_CAPI_DLL void Solution_InitSnap(void);
    DSS_CAPI_DLL uint16_t Solution_Get_SystemYChanged(void);
    DSS_CAPI_DLL void Solution_BuildYMatrix(int32_t BuildOption, int32_t AllocateVI);
    enum Options {
        Options_PowerFlow = 0x00000001,
        Options_Admittance = 0x00000002,
        Options_NormalSolve = 0x00000000,
        Options_NewtonSolve = 0x00000001,
        Options_Static = 0x00000000,
        Options_Event = 0x00000001,
        Options_Time = 0x00000002,
        Options_Multiphase = 0x00000000,
        Options_PositiveSeq = 0x00000001,
        Options_Gaussian = 0x00000001,
        Options_Uniform = 0x00000002,
        Options_LogNormal = 0x00000003,
        Options_AddGen = 0x00000001,
        Options_AddCap = 0x00000002,
        Options_ControlOFF = 0xFFFFFFFF
    };