src/CAPI_Solution.pas


function Solution_Get_LDCurve():PAnsiChar;cdecl;
begin
    Result := DSS_GetAsPAnsiChar(Solution_Get_LDCurve_AnsiString());
end;
//------------------------------------------------------------------------------
procedure Solution_Set_LDCurve(const Value: PAnsiChar);cdecl;
begin
      IF ActiveCircuit <> Nil
      THEN With ActiveCircuit DO
      Begin
            LoadDurCurve    := Value;
            LoadDurCurveObj := LoadShapeClass.Find(LoadDurCurve);
            IF LoadDurCurveObj=NIL THEN
             DoSimpleMsg('Load-Duration Curve not found.', 5001);
      End;

end;
//------------------------------------------------------------------------------
function Solution_Get_pctGrowth():Double;cdecl;
begin
     IF ActiveCircuit <> NIL
     THEN With ActiveCircuit DO
     Begin
        Result := (DefaultGrowthRate-1.0)*100.0
     End;
end;
//------------------------------------------------------------------------------
procedure Solution_Set_pctGrowth(Value: Double);cdecl;
begin
     IF ActiveCircuit <> NIL
     THEN With ActiveCircuit DO
     Begin
        DefaultGrowthRate := 1.0 + Value/100.0;
        DefaultGrowthFactor :=  IntPower(DefaultGrowthRate, (Solution.Year-1));
     End;
end;
//------------------------------------------------------------------------------
function Solution_Get_AddType():Integer;cdecl;
begin
     If ActiveCircuit <> Nil Then Result := ActiveCircuit.AutoAddObj.AddType
     Else Result := 0;
end;
//------------------------------------------------------------------------------
procedure Solution_Set_AddType(Value: Integer);cdecl;
begin
     If ActiveCircuit <> Nil Then ActiveCircuit.AutoAddObj.AddType := Value;
end;
//------------------------------------------------------------------------------
function Solution_Get_GenkW():Double;cdecl;
begin
     If ActiveCircuit <> Nil Then Result := ActiveCircuit.AutoAddObj.GenkW
     Else Result := 0.0;
end;
//------------------------------------------------------------------------------
procedure Solution_Set_GenkW(Value: Double);cdecl;
begin
     If ActiveCircuit <> Nil Then ActiveCircuit.AutoAddObj.GenkW := Value;
end;
//------------------------------------------------------------------------------
function Solution_Get_GenPF():Double;cdecl;
begin
     If ActiveCircuit <> Nil Then Result := ActiveCircuit.AutoAddObj.GenPF
     Else Result := 0.0;
end;
//------------------------------------------------------------------------------
procedure Solution_Set_GenPF(Value: Double);cdecl;
begin
     If ActiveCircuit <> Nil Then ActiveCircuit.AutoAddObj.GenPF := Value;
end;
//------------------------------------------------------------------------------
function Solution_Get_Capkvar():Double;cdecl;
begin
     If ActiveCircuit <> Nil Then Result := ActiveCircuit.AutoAddObj.Capkvar
     Else Result := 0.0;
end;
//------------------------------------------------------------------------------
procedure Solution_Set_Capkvar(Value: Double);cdecl;
begin
     If ActiveCircuit <> Nil Then ActiveCircuit.AutoAddObj.Capkvar := Value;
end;
//------------------------------------------------------------------------------
function Solution_Get_Algorithm():Integer;cdecl;
begin
     If ActiveCircuit <> Nil Then Result := ActiveCircuit.Solution.Algorithm
     Else Result := 0;
end;
//------------------------------------------------------------------------------
procedure Solution_Set_Algorithm(Value: Integer);cdecl;
begin
     If ActiveCircuit <> Nil Then ActiveCircuit.Solution.Algorithm := Value;
end;
//------------------------------------------------------------------------------
function Solution_Get_ControlMode():Integer;cdecl;
begin
     If ActiveCircuit <> Nil Then Result := ActiveCircuit.Solution.ControlMode
     Else Result := 0;
end;
//------------------------------------------------------------------------------
procedure Solution_Set_ControlMode(Value: Integer);cdecl;
begin
    If ActiveCircuit <> Nil Then With ActiveCircuit.Solution Do Begin
         ControlMode := Value;
         DefaultControlMode := ControlMode;
    End;
end;
//------------------------------------------------------------------------------
function Solution_Get_GenMult():Double;cdecl;
begin
     If ActiveCircuit <> Nil Then Result := ActiveCircuit.GenMultiplier
     Else Result := 0.0;
end;
//------------------------------------------------------------------------------
procedure Solution_Set_GenMult(Value: Double);cdecl;
begin
    If ActiveCircuit <> Nil Then ActiveCircuit.GenMultiplier := Value;
end;
//------------------------------------------------------------------------------
function Solution_Get_DefaultDaily_AnsiString():AnsiString;inline;
begin
     IF   ActiveCircuit <> Nil
     THEN Result := ActiveCircuit.DefaultDailyShapeObj.Name
     ELSE Result := '';
end;

function Solution_Get_DefaultDaily():PAnsiChar;cdecl;
begin
    Result := DSS_GetAsPAnsiChar(Solution_Get_DefaultDaily_AnsiString());
end;
//------------------------------------------------------------------------------
function Solution_Get_DefaultYearly_AnsiString():AnsiString;inline;
begin
     IF   ActiveCircuit <> Nil
     THEN Result := ActiveCircuit.DefaultYearlyShapeObj.Name
     ELSE Result := '';
end;

function Solution_Get_DefaultYearly():PAnsiChar;cdecl;
begin
    Result := DSS_GetAsPAnsiChar(Solution_Get_DefaultYearly_AnsiString());
end;
//------------------------------------------------------------------------------
procedure Solution_Set_DefaultDaily(const Value: PAnsiChar);cdecl;
Var  TestLoadShapeObj :TLoadShapeObj;
begin
     If ActiveCircuit <> Nil
     Then
     Begin
           TestLoadShapeObj := LoadShapeClass.Find(Value);
           IF TestLoadShapeObj <> NIL THEN ActiveCircuit.DefaultDailyShapeObj  := TestLoadShapeObj;
     END;
end;
//------------------------------------------------------------------------------
procedure Solution_Set_DefaultYearly(const Value: PAnsiChar);cdecl;
Var  TestLoadShapeObj :TLoadShapeObj;
begin
     If ActiveCircuit <> Nil
     Then
     Begin
           TestLoadShapeObj := LoadShapeClass.Find(Value);
           IF TestLoadShapeObj <> NIL THEN ActiveCircuit.DefaultYearlyShapeObj  := TestLoadShapeObj;
     END;

end;
//------------------------------------------------------------------------------
PROCEDURE Solution_Get_EventLog(var ResultPtr: PPAnsiChar; var ResultCount: Integer);cdecl;
VAR
  Result: PPAnsiCharArray; i:Integer;
begin
    If ActiveCircuit <> Nil Then Begin
       Result := DSS_CreateArray_PPAnsiChar(ResultPtr, ResultCount, (EventStrings.Count-1) + 1);
       For i := 0 to EventStrings.Count-1 Do Begin
          Result[i] := DSS_CopyStringAsPChar(EventStrings.Strings[i]); 
       End;
    END
    Else Result := DSS_CreateArray_PPAnsiChar(ResultPtr, ResultCount, (0) + 1);;

end;
//------------------------------------------------------------------------------
function Solution_Get_dblHour():Double;cdecl;
begin
     If ActiveCircuit <> Nil Then  Begin
        Result := ActiveCircuit.Solution.DynaVars.dblHour;
     End;
end;
//------------------------------------------------------------------------------
procedure Solution_Set_dblHour(Value: Double);cdecl;
begin
  If ActiveCircuit <> Nil Then With ActiveCircuit.Solution Do Begin
      DynaVars.intHour := Trunc(Value);
      DynaVars.dblHour := Value;
      Dynavars.t := (Value - DynaVars.intHour) * 3600.0;
  End;
end;
//------------------------------------------------------------------------------
procedure Solution_Set_StepsizeHr(Value: Double);cdecl;
begin
  If ActiveCircuit <> Nil Then Begin
      ActiveCircuit.Solution.Dynavars.h := Value * 3600.0;
  End;
end;
//------------------------------------------------------------------------------
procedure Solution_Set_StepsizeMin(Value: Double);cdecl;
begin

  If ActiveCircuit <> Nil Then Begin
      ActiveCircuit.Solution.Dynavars.h := Value * 60.0;
  End;

end;
//------------------------------------------------------------------------------
function Solution_Get_ControlIterations():Integer;cdecl;
begin
     If ActiveCircuit <> Nil Then  Begin
        Result := ActiveCircuit.Solution.ControlIteration;
     End;
end;
//------------------------------------------------------------------------------
function Solution_Get_MaxControlIterations():Integer;cdecl;
begin
     If ActiveCircuit <> Nil Then  Begin
        Result := ActiveCircuit.Solution.MaxControlIterations;
     End;
end;
//------------------------------------------------------------------------------
procedure Solution_Sample_DoControlActions();cdecl;
begin
    If ActiveCircuit <> Nil Then Begin
      ActiveCircuit.Solution.Sample_DoControlActions  ;
   End;
end;
//------------------------------------------------------------------------------
procedure Solution_Set_ControlIterations(Value: Integer);cdecl;
begin
    If ActiveCircuit <> Nil Then Begin
      ActiveCircuit.Solution.ControlIteration := Value;
    End;
end;
//------------------------------------------------------------------------------
procedure Solution_Set_MaxControlIterations(Value: Integer);cdecl;
begin
    If ActiveCircuit <> Nil Then Begin
      ActiveCircuit.Solution.MaxControlIterations := Value;
    End;
end;
//------------------------------------------------------------------------------
procedure Solution_CheckFaultStatus();cdecl;
begin
   If ActiveCircuit <> Nil Then Begin
      ActiveCircuit.Solution.Check_Fault_Status ;
   End;
end;
//------------------------------------------------------------------------------
procedure Solution_SolveDirect();cdecl;
begin
   If ActiveCircuit <> Nil Then Begin
      ActiveCircuit.Solution.SolveDirect;
   End;
end;
//------------------------------------------------------------------------------
procedure Solution_SolveNoControl();cdecl;
{Solves without checking controls}
begin
   If ActiveCircuit <> Nil Then Begin
      ActiveCircuit.Solution.SolveCircuit;
   End;
end;
//------------------------------------------------------------------------------
procedure Solution_SolvePflow();cdecl;
begin
   If ActiveCircuit <> Nil Then Begin
      ActiveCircuit.Solution.DoPflowSolution;
   End;
end;
//------------------------------------------------------------------------------
procedure Solution_SolvePlusControl();cdecl;
{One Pass Through the solution and then dispatches controls}
begin
   If ActiveCircuit <> Nil Then Begin
      With ActiveCircuit.Solution Do Begin
         SolveCircuit;
         CheckControls;
      End;
   End;
end;
//------------------------------------------------------------------------------
procedure Solution_SolveSnap();cdecl;
begin
   If ActiveCircuit <> Nil Then Begin
      ActiveCircuit.Solution.SolveSnap;
   End;
end;
//------------------------------------------------------------------------------
procedure Solution_CheckControls();cdecl;
begin
   If ActiveCircuit <> Nil Then Begin
      ActiveCircuit.Solution.CheckControls;
   End;
end;
//------------------------------------------------------------------------------
procedure Solution_InitSnap();cdecl;
{Initi some things that are done at the beginning of a snapshot solve}
begin
   If ActiveCircuit <> Nil Then Begin
      ActiveCircuit.Solution.SnapShotInit;
   End;
end;
//------------------------------------------------------------------------------
function Solution_Get_SystemYChanged():WordBool;cdecl;
begin
   If ActiveCircuit <> Nil Then Begin
      Result := ActiveCircuit.Solution.SystemYChanged;
   End;
end;
//------------------------------------------------------------------------------
procedure Solution_BuildYMatrix(BuildOption, AllocateVI: Integer);cdecl;
{
  Build Options
    1 = Series elements only
    2 = Whole Y matrix

  AllocateVI
    TRUE:  Reallocate VI
    FALSE: Do not Reallocate VI; leave as is
}
